Clean previous build before running goreleaser
The goreleaser command will not publish if the repo is in a dirty
state, so the leftover binary from previous step needs to be
removed first.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ script:
   - go build
   - test -n "${TRAVIS_TAG}" || goreleaser --skip-validate --skip-publish
 after_success:
+  - test -n "${TRAVIS_TAG}" && go clean
   - test -n "${TRAVIS_TAG}" && goreleaser
