--- a/debian/playbook.yml
+++ b/debian/playbook.yml
@@ -124,6 +124,8 @@
           dest: /tmp/kubernetes-server-linux-amd64.tar.gz
         - src: https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/debian_amd64/amazon-ssm-agent.deb
           dest: /mnt/tmp/amazon-ssm-agent.deb
+        - src: https://github.com/cloudboss/keights/releases/download/v{{ keights_version }}/keights_{{ keights_version }}_linux_amd64.deb
+          dest: /mnt/tmp/keights.deb
 
     - name: unarchive software
       unarchive:
@@ -200,6 +202,7 @@
           openssh-server \
           docker-engine={{ docker_version }} && \
         dpkg -i /tmp/amazon-ssm-agent.deb && \
+        dpkg -i /tmp/keights.deb && \
         apt-get clean && \
         systemctl enable amazon-ssm-agent && \
         systemctl disable apt-daily.timer && \
