Bind mount /etc/hosts for etcd
If this is not done, then changes to /etc/hosts do not get
updated inside the etcd container.

--- a/master.yml
+++ b/master.yml
@@ -259,12 +259,17 @@ Resources:
                         requests:
                           cpu: 200m
                       volumeMounts:
+                      - mountPath: /etc/hosts
+                        name: etchosts
                       - mountPath: /var/lib/etcd
                         name: varlibetcd
                       - mountPath: /var/log/etcd.log
                         name: varlogetcd
                     hostNetwork: true
                     volumes:
+                    - hostPath:
+                        path: /etc/hosts
+                      name: etchosts
                     - hostPath:
                         path: /var/lib/etcd
                       name: varlibetcd
