Add apiserver security group
The security group for the apiserver will be assigned to both
master and node autoscaling groups so that they can all
communicate, so the security group is being placed in a common
stack to be created before masters and nodes.

--- a/master.yml
+++ b/master.yml
@@ -30,6 +30,9 @@ Parameters:
   IamInstanceProfile:
     Description: IAM Instance profile to assign to instances
     Type: String
+  ApiServerSecurityGroup:
+    Description: Security group for apiserver
+    Type: String
   LambdaExecutionRole:
     Description: Role to assign to helper Lamba functions
     Type: String
@@ -195,6 +198,7 @@ Resources:
       KeyName: !Ref KeyPair
       PlacementTenancy: default
       SecurityGroups:
+        - !Ref ApiServerSecurityGroup
         - !Ref AutoscalingGroupSecurityGroup
         - !Ref EtcdSecurityGroup
       UserData:
