--- a/fpm/usr/lib/systemd/system/kube-proxy.service
+++ b/fpm/usr/lib/systemd/system/kube-proxy.service
@@ -6,6 +6,7 @@ After=keights-configure.target
 [Service]
 # Environment=KEIGHTS_MASTER=
 ExecStart=/usr/local/bin/kube-proxy \
+            --kubeconfig=/var/lib/kube-proxy/kubeconfig \
             --master=${KEIGHTS_MASTER} \
             --config=/etc/kubernetes/kube-proxy.yml
 Restart=always
