--- a/fpm/usr/lib/systemd/system/kube-proxy.service
+++ b/fpm/usr/lib/systemd/system/kube-proxy.service
@@ -5,10 +5,11 @@ After=keights-configure.target
 
 [Service]
 # Environment=KEIGHTS_MASTER=
+Environment=KEIGHTS_KUBE_PROXY_EXTRA_OPTS=
 ExecStart=/usr/local/bin/kube-proxy \
             --kubeconfig=/var/lib/kube-proxy/kubeconfig \
             --master=${KEIGHTS_MASTER} \
-            --config=/etc/kubernetes/kube-proxy.yml
+            --config=/etc/kubernetes/kube-proxy.yml ${KEIGHTS_KUBE_PROXY_EXTRA_OPTS}
 Restart=always
 RestartSec=5
 
