--- a/fpm/usr/lib/systemd/system/keights-templatize-kube-apiserver.service
+++ b/fpm/usr/lib/systemd/system/keights-templatize-kube-apiserver.service
@@ -8,7 +8,7 @@ Type=simple
 # Environment=AWS_REGION=
 # Environment=KEIGHTS_KUBE_APISERVER_IMAGE=
 # Environment=KEIGHTS_DOMAIN=
-# Environment=KEIGHTS_POD_CIDR=
+# Environment=KEIGHTS_SERVICE_CIDR=
 # Environment=KEIGHTS_PREFIX=
 ExecStartPre=/usr/bin/systemd-tmpfiles --create --prefix /etc/kubernetes
 ExecStart=/usr/bin/keights template \
@@ -16,7 +16,7 @@ ExecStart=/usr/bin/keights template \
             -t /usr/share/keights/kube-apiserver.yml.template \
             -D /etc/kubernetes/manifests/kube-apiserver.yml \
             -v KubeApiserverImage=${KEIGHTS_KUBE_APISERVER_IMAGE} \
-            -v PodCidr=${KEIGHTS_POD_CIDR} \
+            -v ServiceCidr=${KEIGHTS_SERVICE_CIDR} \
             -v Prefix=${KEIGHTS_PREFIX} \
             -v Domain=${KEIGHTS_DOMAIN}
 
