Update kube-controller-manager settings
Add pod and service CIDR settings to the kube-controller-manager,
as well as the systemd service to generate the config.

--- a/fpm/usr/share/keights/kube-controller-manager.yml.template
+++ b/fpm/usr/share/keights/kube-controller-manager.yml.template
@@ -17,6 +17,9 @@ spec:
     - --address=127.0.0.1
     - --leader-elect=true
     - --controllers=*,bootstrapsigner,tokencleaner
+    - --allocate-node-cidrs=true
+    - --cluster-cidr={{ .PodCidr }}
+    - --service-cluster-ip-range={{ .ServiceCidr }}
     image: {{ .KubeControllerManagerImage }}
     livenessProbe:
       failureThreshold: 8
