--- a/fpm/usr/lib/systemd/system/keights-templatize-kube-controller-manager.service
+++ b/fpm/usr/lib/systemd/system/keights-templatize-kube-controller-manager.service
@@ -5,11 +5,15 @@ Description=keights-templatize-kube-controller-manager service
 Type=simple
 # Environment=AWS_REGION=
 # Environment=KEIGHTS_KUBE_CONTROLLER_MANAGER_IMAGE=
+# Environment=KEIGHTS_POD_CIDR=
+# Environment=KEIGHTS_SERVICE_CIDR=
 ExecStartPre=/usr/bin/systemd-tmpfiles --create --prefix /etc/kubernetes
 ExecStart=/usr/bin/keights template \
             -i /run/keights-collector/asg \
             -t /usr/share/keights/kube-controller-manager.yml.template \
             -D /etc/kubernetes/manifests/kube-controller-manager.yml \
+            -v PodCidr=${KEIGHTS_POD_CIDR} \
+            -v ServiceCidr=${KEIGHTS_SERVICE_CIDR} \
             -v KubeControllerManagerImage=${KEIGHTS_KUBE_CONTROLLER_MANAGER_IMAGE}
 
 [Install]
