--- a/fpm/usr/lib/systemd/system/kubelet.service
+++ b/fpm/usr/lib/systemd/system/kubelet.service
@@ -20,6 +20,8 @@ ExecStart=/usr/local/bin/kubelet \
             --pod-manifest-path=/etc/kubernetes/manifests \
             --pod-cidr=${KEIGHTS_POD_CIDR} \
             --runtime-request-timeout=15m \
+            --network-plugin=cni \
+            --network-plugin-dir=/usr/lib/cni \
             --v=2 ${KEIGHTS_KUBELET_EXTRA_OPTS}
 Restart=always
 RestartSec=5
