--- a/fpm/usr/share/keights/kube-controller-manager.yml.template
+++ b/fpm/usr/share/keights/kube-controller-manager.yml.template
@@ -13,6 +13,7 @@ spec:
   containers:
   - command:
     - /usr/local/bin/kube-controller-manager
+    - --cluster-name={{ .ClusterName }}
     - --master={{ .MyIP }}:8080
     - --address=127.0.0.1
     - --leader-elect=true
