--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -48,6 +48,10 @@ fpm:
       /usr/lib/systemd/system/keights-templatize-kube-scheduler.service
     fpm/usr/lib/systemd/system/keights-volumize.service:
       /usr/lib/systemd/system/keights-volumize.service
+    fpm/usr/lib/systemd/system/keights-whisper-controller.service:
+      /usr/lib/systemd/system/keights-whisper-controller.service
+    fpm/usr/lib/systemd/system/keights-whisper-node.service:
+      /usr/lib/systemd/system/keights-whisper-node.service
     fpm/usr/lib/systemd/system/kube-router.service:
       /usr/lib/systemd/system/kube-router.service
     fpm/usr/lib/systemd/system/kubelet.service:
