Remove bootstrap token from whisper systemd units

--- a/fpm/usr/lib/systemd/system/keights-whisper-node.service
+++ b/fpm/usr/lib/systemd/system/keights-whisper-node.service
@@ -6,8 +6,7 @@ Type=oneshot
 # Environment=AWS_REGION=
 # Environment=KEIGHTS_CLUSTER_NAME=
 ExecStart=/usr/bin/keights whisper \
-            -p /${KEIGHTS_CLUSTER_NAME}/cluster/ca.crt:/run/kubernetes/pki/ca.crt \
-            -p /${KEIGHTS_CLUSTER_NAME}/cluster/boostrap-token:/run/kubernetes/pki/bootstrap-token
+            -p /${KEIGHTS_CLUSTER_NAME}/cluster/ca.crt:/run/kubernetes/pki/ca.crt
 
 [Install]
 WantedBy=keights-configure.target
